<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#A3A3A3"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textBank"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/bank_bin_list"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewBank"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/not_result"
                    android:textColor="@color/text_color_shablon_bin_list"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textViewBIN"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/not_result"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewUrlBank"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autoLink="web"
                    android:text="@string/not_result"
                    android:textColor="@color/text_color_shablon_bin_list"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textViewPhoneBank"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autoLink="phone"
                    android:text="@string/not_result"
                    android:textColor="@color/text_color_shablon_bin_list"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textViewMapBank"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/not_result"
                    android:includeFontPadding="true"
                    android:textColor="#0047FF"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textScheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/scheme_network_bin_list"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textViewScheme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/not_result"
                        android:textColor="@color/text_color_shablon_bin_list"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/type_bin_list"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textViewType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/not_result"
                        android:textColor="@color/text_color_shablon_bin_list"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="1dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textBrand"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/brand_bin_list"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textViewBrand"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/not_result"
                        android:textColor="@color/text_color_shablon_bin_list"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textPrepaid"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/prepaid_bin_list"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textViewPrepaid"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/not_result"
                        android:textColor="@color/text_color_shablon_bin_list"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    tools:ignore="UselessParent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="1dp"
                        android:layout_marginTop="1dp"
                        android:layout_marginEnd="1dp"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        tools:ignore="NestedWeights">

                        <TextView
                            android:id="@+id/textCardNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/card_number_bin_list"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textCnLength"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/length_bin_list"
                                android:textColor="@color/text_color"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/textCnLuhn"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/luhn_bin_list"
                                android:textColor="@color/text_color"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textViewCNLength"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/not_result"
                                android:textColor="@color/text_color_shablon_bin_list"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/textViewCNLuhn"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/not_result"
                                android:textColor="@color/text_color_shablon_bin_list"
                                android:textSize="16sp" />
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textCountry"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/country_bin_list"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textViewCountry"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/not_result"
                            android:textColor="@color/text_color_shablon_bin_list"
                            android:textSize="16sp" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>